--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Damion&display=swap');
 root{
     --main-color:#0E0D0C;
     --secondary-color:#161718;
@@ -10,6 +10,7 @@ root{
         margin: 0;
         padding: 0;
         box-sizing: border-box;
+        /* overflow-x:hidden; */
 }
         
 body{
@@ -20,6 +21,7 @@ nav a.brand{
     font-size: 2rem;
     color: white;
     font-weight: 600;
+    font-family: "Damion";
 }
 
 nav a.brand span{
@@ -41,9 +43,12 @@ nav .hamburger-menu{
 }
 
 .scrolled{
-    /* mix-blend-mode: difference; */
     background-color: #161718;
     border-bottom: 2px solid crimson;
+}
+
+.hamburger-open {
+    background-color: #161718;
 }
 
 section{
@@ -101,6 +106,11 @@ section{
 
 section.about{
     background-color: #161718;
+    padding-top: 10rem;
+}
+
+section.menu{
+    padding-top: 10rem;
 }
 
 section.about .about-text{
@@ -130,9 +140,16 @@ footer{
             margin: 20px 0; /* Jarak atas dan bawah garis */
         }
 
+.menu-image{
+    width: 100px;
+    height:100px ;
+}
+
 .menu-image img {
     width: 100%;
-    height: auto;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
 }
 
 .menu-description {
@@ -223,3 +240,76 @@ select#person,select#waktu{
     padding-right: 1rem;
 }
 
+.list_menu{
+    display: none;
+}
+.swiper {
+  width: 600px;
+  height: 400px;
+}
+
+.swiper-slide img{
+    width: 100%;
+    height: 100%;
+}
+
+:root{
+    --swiper-theme-color:crimson !important;
+}
+
+.kotak-menu{
+    width: 45%;
+    /* background-color: white; */
+    height: 150px;
+    display: flex;
+}
+
+.kotak-menu .kiri{
+    width: 150px;
+    height: 150px;
+}
+
+.kotak-menu .kanan{
+    color: white;
+}
+
+.kotak-menu .kiri img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+
+
+@media (max-width: 768px) {
+    section.about p,section.about h2{
+        text-align: center;
+    }
+
+    footer.sosmed svg{
+        width: 20px;
+        height: 20px;
+    }
+
+    section.hero .hero-text{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .swiper{
+        width: 400px;
+    }
+
+    .kotak-menu{
+        width: 100%;
+    }
+
+    .kotak-menu .kanan{
+        padding-left: 1em;
+    }
+
+    section.about,section.menu{
+        padding-top: 6rem;
+    }
+}
