--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -258,9 +258,8 @@ select#person,select#waktu{
     --swiper-theme-color:crimson !important;
 }
 
-.kotak-menu{
+/* .kotak-menu{
     width: 45%;
-    /* background-color: white; */
     height: 150px;
     display: flex;
 }
@@ -279,8 +278,39 @@ select#person,select#waktu{
     height: 100%;
     object-fit: cover;
     object-position: center;
+} */
+
+.kotak-menu {
+  width: 45%;
+  height: 150px;
+  display: flex;
+  flex-direction: column;
 }
 
+.kotak-menu .row {
+  flex: 1;
+  display: flex;
+}
+
+.kotak-menu .kiri {
+  width: 100%; /* Isi penuh kolom kiri */
+  height: 150px; /* Tinggi tetap untuk gambar */
+}
+
+.kotak-menu .kanan {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  /* padding-left: 15px; */
+  color: white;
+}
+
+.kotak-menu .kiri img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
 
 @media (max-width: 768px) {
     section.about p,section.about h2{
@@ -300,6 +330,7 @@ select#person,select#waktu{
 
     .swiper{
         width: 400px;
+        height: 300px;
     }
 
     .kotak-menu{
